--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "license": "ISC",
     "devDependencies": {
         "tailwindcss": "^3.0.9"
+    },
+    "dependencies": {
+        "@tailwindcss/forms": "^0.4.0"
     }
 }
